@@ -3,17 +3,16 @@ package com.enqbs.admin.controller;
 import com.enqbs.common.util.R;
 import com.enqbs.file.enums.DirEnum;
 import com.enqbs.file.service.FileService;
+import jakarta.annotation.Resource;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.multipart.MultipartFile;
 
-import javax.annotation.Resource;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/upload")
@@ -32,8 +31,7 @@ public class FileController {
 
     @PostMapping("/spu-slider")
     public R<Map<String, List<String>>> uploadSpuSlider(@RequestParam List<MultipartFile> files) {
-        List<String> fileURLList = files.stream()
-                .map(e -> fileService.getFileURL(e, DirEnum.SPU_SLIDER)).collect(Collectors.toList());
+        List<String> fileURLList = files.stream().map(f -> fileService.getFileURL(f, DirEnum.SPU_SLIDER)).toList();
         Map<String, List<String>> resultMap = new HashMap<>();
         resultMap.put("spuSlider", fileURLList);
         return R.ok(resultMap);
@@ -41,8 +39,7 @@ public class FileController {
 
     @PostMapping("/spu-overview")
     public R<Map<String, List<String>>> uploadSpuOverview(@RequestParam List<MultipartFile> files) {
-        List<String> fileURLList = files.stream()
-                .map(e -> fileService.getFileURL(e, DirEnum.SPU_OVERVIEW)).collect(Collectors.toList());
+        List<String> fileURLList = files.stream().map(f -> fileService.getFileURL(f, DirEnum.SPU_OVERVIEW)).toList();
         Map<String, List<String>> resultMap = new HashMap<>();
         resultMap.put("spuOverview", fileURLList);
         return R.ok(resultMap);
@@ -50,8 +47,7 @@ public class FileController {
 
     @PostMapping("/spu-spec")
     public R<Map<String, List<String>>> uploadSpuSpec(@RequestParam List<MultipartFile> files) {
-        List<String> fileURLList = files.stream()
-                .map(e -> fileService.getFileURL(e, DirEnum.SPU_SPEC)).collect(Collectors.toList());
+        List<String> fileURLList = files.stream().map(f -> fileService.getFileURL(f, DirEnum.SPU_SPEC)).toList();
         Map<String, List<String>> resultMap = new HashMap<>();
         resultMap.put("spuSpec", fileURLList);
         return R.ok(resultMap);
