@@ -2,14 +2,15 @@ package com.enqbs.admin.service.order;
 
 import com.enqbs.admin.convert.OrderConvert;
 import com.enqbs.admin.vo.OrderItemVO;
+import com.enqbs.admin.vo.SkuParamVO;
+import com.enqbs.common.util.GsonUtil;
 import com.enqbs.generator.dao.OrderItemMapper;
 import com.enqbs.generator.pojo.OrderItem;
+import jakarta.annotation.Resource;
 import org.springframework.stereotype.Service;
 
-import javax.annotation.Resource;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 @Service
 public class OrderItemServiceImpl implements OrderItemService {
@@ -23,13 +24,23 @@ public class OrderItemServiceImpl implements OrderItemService {
     @Override
     public List<OrderItemVO> getOrderItemVOList(Long orderNo) {
         List<OrderItem> orderItemList = orderItemMapper.selectListByOrderNo(orderNo);
-        return orderItemList.stream().map(e -> orderConvert.orderItem2OrderItemVO(e)).collect(Collectors.toList());
+        return orderItemList.stream().map(o -> {
+                    OrderItemVO orderItemVO = orderConvert.orderItem2OrderItemVO(o);
+                    orderItemVO.setSkuParams(GsonUtil.json2ArrayList(o.getSkuParams(), SkuParamVO[].class));
+                    return orderItemVO;
+                }
+        ).toList();
     }
 
     @Override
     public List<OrderItemVO> getOrderItemVOList(Set<Long> orderNoSet) {
         List<OrderItem> orderItemList = orderItemMapper.selectListByOrderNoSet(orderNoSet);
-        return orderItemList.stream().map(e -> orderConvert.orderItem2OrderItemVO(e)).collect(Collectors.toList());
+        return orderItemList.stream().map(o -> {
+                    OrderItemVO orderItemVO = orderConvert.orderItem2OrderItemVO(o);
+                    orderItemVO.setSkuParams(GsonUtil.json2ArrayList(o.getSkuParams(), SkuParamVO[].class));
+                    return orderItemVO;
+                }
+        ).toList();
     }
 
 }
