@@ -4,12 +4,11 @@ import com.enqbs.admin.convert.PayConvert;
 import com.enqbs.admin.vo.PayPlatformVO;
 import com.enqbs.generator.dao.PayPlatformMapper;
 import com.enqbs.generator.pojo.PayPlatform;
+import jakarta.annotation.Resource;
 import org.springframework.stereotype.Service;
 
-import javax.annotation.Resource;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 @Service
 public class PayPlatformServiceImpl implements PayPlatformService {
@@ -23,7 +22,7 @@ public class PayPlatformServiceImpl implements PayPlatformService {
     @Override
     public List<PayPlatformVO> getPayPlatformVOList(Set<Long> payInfoIdSet) {
         List<PayPlatform> payPlatformList = payPlatformMapper.selectListByPayInfoIdSet(payInfoIdSet);
-        return payPlatformList.stream().map(e -> payConvert.payPlatform2PayPlatformVO(e)).collect(Collectors.toList());
+        return payPlatformList.stream().map(p -> payConvert.payPlatform2PayPlatformVO(p)).toList();
     }
 
     @Override
