@@ -10,11 +10,11 @@ import com.enqbs.common.constant.Constants;
 import com.enqbs.common.util.PageUtil;
 import com.enqbs.generator.dao.SpuMapper;
 import com.enqbs.generator.pojo.Spu;
+import jakarta.annotation.Resource;
 import org.apache.commons.lang3.ObjectUtils;
 import org.springframework.stereotype.Service;
 import org.springframework.util.CollectionUtils;
 
-import javax.annotation.Resource;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -35,9 +35,8 @@ public class SpuServiceImpl implements SpuService {
     private ProductConvert productConvert;
 
     @Override
-    public PageUtil<ProductVO> getProductVOList(Integer categoryId, Integer saleableStatus, Integer newStatus,
-                                                Integer recommendStatus, Integer deleteStatus, SortEnum sort,
-                                                Integer pageNum, Integer pageSize) {
+    public PageUtil<ProductVO> productVOPage(Integer categoryId, Integer saleableStatus, Integer newStatus, Integer recommendStatus,
+                                             Integer deleteStatus, SortEnum sort, Integer pageNum, Integer pageSize) {
         PageUtil<ProductVO> pageUtil = new PageUtil<>();
         pageUtil.setNum(pageNum);
         pageUtil.setSize(pageSize);
@@ -49,17 +48,17 @@ public class SpuServiceImpl implements SpuService {
         }
 
         Long total = spuMapper.countByParam(categoryId, saleableStatus, newStatus, recommendStatus, deleteStatus);
-        Set<Integer> productIdSet = spuList.stream().map(Spu::getId).collect(Collectors.toSet());
-        List<SkuVO> skuVOList = skuService.getSkuVOList(productIdSet);
-        handleSkuVOListAndSkuStockVO(skuVOList);
+        Set<Integer> spuIdSet = spuList.stream().map(Spu::getId).collect(Collectors.toSet());
+        List<SkuVO> skuVOList = skuService.getSkuVOList(spuIdSet);
+        handleSkuVOListAndStockVO(skuVOList);
         Map<Integer, List<SkuVO>> skuVOListMap = skuVOList.stream().collect(Collectors.groupingBy(SkuVO::getSpuId));
-        List<ProductVO> productVOList = spuList.stream().map(e -> {
-                    ProductVO productVO = productConvert.spu2ProductVO(e);
-                    productVO.setSlide(spuSlideService.getSpuSlideList(productVO.getId()));
+        List<ProductVO> productVOList = spuList.stream().map(s -> {
+                    ProductVO productVO = productConvert.spu2ProductVO(s);
+                    productVO.setSlide(spuSlideService.getSlideList(productVO.getId()));
                     productVO.setSkuList(skuVOListMap.get(productVO.getId()));
                     return productVO;
                 }
-        ).collect(Collectors.toList());
+        ).toList();
         pageUtil.setTotal(total);
         pageUtil.setList(productVOList);
         return pageUtil;
@@ -74,22 +73,22 @@ public class SpuServiceImpl implements SpuService {
         }
 
         List<SkuVO> skuVOList = skuService.getSkuVOList(spuId);
-        handleSkuVOListAndSkuStockVO(skuVOList);
+        handleSkuVOListAndStockVO(skuVOList);
         ProductVO productVO = productConvert.spu2ProductVO(spu);
-        productVO.setSlide(spuSlideService.getSpuSlideList(spuId));
+        productVO.setSlide(spuSlideService.getSlideList(spuId));
         productVO.setSkuList(skuVOList);
         return productVO;
     }
 
     @Override
     public int insert(ProductForm form) {
-        Spu spu = productConvert.productForm2Product(form);
+        Spu spu = productConvert.form2Spu(form);
         return spuMapper.insertSelective(spu);
     }
 
     @Override
     public int update(Integer productId, ProductForm form) {
-        Spu spu = productConvert.productForm2Product(form);
+        Spu spu = productConvert.form2Spu(form);
         spu.setId(productId);
         return spuMapper.updateByPrimaryKeySelective(spu);
     }
@@ -111,11 +110,11 @@ public class SpuServiceImpl implements SpuService {
         return spuMapper.updateByPrimaryKeySelective(spu);
     }
 
-    private void handleSkuVOListAndSkuStockVO(List<SkuVO> skuVOList) {
+    private void handleSkuVOListAndStockVO(List<SkuVO> skuVOList) {
         Set<Integer> skuIdSet = skuVOList.stream().map(SkuVO::getId).collect(Collectors.toSet());
-        List<SkuStockVO> skuStockVOList = skuStockService.getSkuStockVOList(skuIdSet);
-        Map<Integer, SkuStockVO> skuStockVOMap = skuStockVOList.stream().collect(Collectors.toMap(SkuStockVO::getSkuId, v -> v));
-        skuVOList.forEach(skuVO -> skuVO.setSkuStock(skuStockVOMap.get(skuVO.getId())));
+        Map<Integer, SkuStockVO> stockVOMap = skuStockService.getStockVOList(skuIdSet).stream()
+                .collect(Collectors.toMap(SkuStockVO::getSkuId, v -> v));
+        skuVOList.forEach(svo -> svo.setStock(stockVOMap.get(svo.getId())));
     }
 
 }
