@@ -7,14 +7,13 @@ import com.enqbs.app.enums.SortEnum;
 import com.enqbs.common.util.PageUtil;
 import com.enqbs.generator.dao.CouponMapper;
 import com.enqbs.generator.pojo.Coupon;
+import jakarta.annotation.Resource;
 import org.apache.commons.lang3.ObjectUtils;
 import org.springframework.stereotype.Service;
 import org.springframework.util.CollectionUtils;
 
-import javax.annotation.Resource;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 @Service
 public class CouponServiceImpl implements CouponService {
@@ -26,13 +25,7 @@ public class CouponServiceImpl implements CouponService {
     private CouponConvert couponConvert;
 
     @Override
-    public List<CouponVO> getCouponVOList(Set<Integer> couponIdSet) {
-        return couponMapper.selectListByCouponIdSet(couponIdSet).stream()
-                .map(e -> couponConvert.coupon2CouponVO(e)).collect(Collectors.toList());
-    }
-
-    @Override
-    public PageUtil<CouponVO> getCouponVOList(SortEnum sort, Integer pageNum, Integer pageSize) {
+    public PageUtil<CouponVO> couponVOPage(SortEnum sort, Integer pageNum, Integer pageSize) {
         PageUtil<CouponVO> pageUtil = new PageUtil<>();
         pageUtil.setNum(pageNum);
         pageUtil.setSize(pageSize);
@@ -45,8 +38,13 @@ public class CouponServiceImpl implements CouponService {
 
         Long total = couponMapper.countByParam(null, null, null, null, Constants.IS_NOT_DELETE);
         pageUtil.setTotal(total);
-        pageUtil.setList(couponList.stream().map(e -> couponConvert.coupon2CouponVO(e)).collect(Collectors.toList()));
+        pageUtil.setList(couponList.stream().map(c -> couponConvert.coupon2CouponVO(c)).toList());
         return pageUtil;
+    }
+
+    @Override
+    public List<CouponVO> getCouponVOList(Set<Integer> couponIdSet) {
+        return couponMapper.selectListByIdSet(couponIdSet).stream().map(c -> couponConvert.coupon2CouponVO(c)).toList();
     }
 
     @Override
