@@ -7,12 +7,11 @@ import com.enqbs.common.exception.ServiceException;
 import com.enqbs.common.util.GsonUtil;
 import com.enqbs.generator.dao.OrderItemMapper;
 import com.enqbs.generator.pojo.OrderItem;
+import jakarta.annotation.Resource;
 import org.springframework.stereotype.Service;
 
-import javax.annotation.Resource;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 @Service
 public class OrderItemServiceImpl implements OrderItemService {
@@ -26,23 +25,23 @@ public class OrderItemServiceImpl implements OrderItemService {
     @Override
     public List<OrderItemVO> getOrderItemVOList(Long orderNo) {
         List<OrderItem> orderItemList = orderItemMapper.selectListByOrderNo(orderNo);
-        return orderItemList.stream().map(e -> {
-                    OrderItemVO orderItemVO = orderConvert.orderItem2OrderItemVO(e);
-                    orderItemVO.setSkuParams(GsonUtil.json2ArrayList(e.getSkuParams(), SkuParamVO[].class));
+        return orderItemList.stream().map(o -> {
+                    OrderItemVO orderItemVO = orderConvert.orderItem2OrderItemVO(o);
+                    orderItemVO.setSkuParams(GsonUtil.json2ArrayList(o.getSkuParams(), SkuParamVO[].class));
                     return orderItemVO;
                 }
-        ).collect(Collectors.toList());
+        ).toList();
     }
 
     @Override
     public List<OrderItemVO> getOrderItemVOList(Set<Long> orderNoSet) {
         List<OrderItem> orderItemList = orderItemMapper.selectListByOrderNoSet(orderNoSet);
-        return orderItemList.stream().map(e -> {
-                    OrderItemVO orderItemVO = orderConvert.orderItem2OrderItemVO(e);
-                    orderItemVO.setSkuParams(GsonUtil.json2ArrayList(e.getSkuParams(), SkuParamVO[].class));
+        return orderItemList.stream().map(o -> {
+                    OrderItemVO orderItemVO = orderConvert.orderItem2OrderItemVO(o);
+                    orderItemVO.setSkuParams(GsonUtil.json2ArrayList(o.getSkuParams(), SkuParamVO[].class));
                     return orderItemVO;
                 }
-        ).collect(Collectors.toList());
+        ).toList();
     }
 
     @Override
